--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "conquer/select2": "*",
         "yiibr/yii2-br-validator": "*",
         "kartik-v/yii2-widget-fileinput": "@dev",
-        "kartik-v/yii2-widget-growl": "*"
+        "kartik-v/yii2-widget-growl": "*",
+        "zyx/zyx-phpmailer": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
